# raster-graphics-editor

./: .clangd  .gitignore  CMakeLists.txt  README.md
data/: basic.frag  basic.vert  compute.glsl
include/ImGuiFileDialog/: CMakeLists.txt
include/dirent/: CMakeLists.txt
include/glad/: CMakeLists.txt
include/glad/include/glad/: gl.h
include/glad/src/: gl.c
include/imgui/: CMakeLists.txt
include/stb/: CMakeLists.txt
src/: Application.cpp  Application.h  CanvasState.h  ComputeRenderer.cpp  ComputeRenderer.h  ComputeShader.cpp  ComputeShader.h  GUI.cpp  GUI.h  GUICommands.cpp  GUICommands.h  RGE_pch.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Style.cpp  Style.h  Window.cpp  Window.h  imgui_demo.cpp  main.cpp  main.h
